--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     },
     "rules": {
         "no-console":"off",
-        "linebreak-style": ["error", "windows"]
+        "linebreak-style": "off",
+        "no-underscore-dangle": "off"
     }
 }
