--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "nodemon ./src/server.js",
-    "start-prod": "set NODE_ENV=production && node ./src/server.js",
+    "start-prod": "node ./src/server.js production",
     "lint": "eslint ./src"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^20.1.2",
+    "joi": "^17.4.0",
     "nanoid": "^3.1.22"
   },
   "devDependencies": {
