--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "nodemon ./src/server.js",
     "start-prod": "node ./src/server.js production",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "migrate": "node-pg-migrate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^20.1.2",
+    "dotenv": "^10.0.0",
     "joi": "^17.4.0",
-    "nanoid": "^3.1.22"
+    "nanoid": "^3.1.22",
+    "node-pg-migrate": "^5.9.0",
+    "pg": "^8.6.0"
   },
   "devDependencies": {
     "eslint": "^7.24.0",
