--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "nodemon ./src/server.js",
+    "start": "node ./src/server.js production",
     "start-prod": "node ./src/server.js production",
     "lint": "eslint ./src",
     "migrate": "node-pg-migrate"
