--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "joi": "^17.4.0",
     "nanoid": "^3.1.22",
     "node-pg-migrate": "^5.9.0",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "redis": "^3.1.2"
   },
   "devDependencies": {
     "eslint": "^7.24.0",
